# InvestoScrapo

./: .coveragerc  README.md  app.py  client.py  code_of_conduct.md  excel.xlsx  helper.py  pyproject.toml  requirements.txt  setup.py  test_investoscrapo.py  yfin_search.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
bse_scraper/: BSE_Client.py  __init__.py  price.xlsx  pyproject.toml  setup.py
bse_scraper/bsescraper/: __main__.py
bse_scraper/bsescraper/configs/: constants.py
bse_scraper/bsescraper/utils/: logger.py
bse_scraper/tests/: test_bse_scraper.py
configs/: constants.py
docs/: conf.py  index.rst
investoscrapo/: LICENSE  __init__.py  __main__.py  client.py  helper.py  scraper.py
investoscrapo/configs/: constants.py
investoscrapo/utils/: transformer.py
nse_scraper/: .coveragerc  LICENSE  NSE_Client.py  README.md
nse_scraper/docs/: conf.py  index.rst
nse_scraper/nsescraper/: __init__.py
nse_scraper/nsescraper/configs/: constants.py
tests/: test_investoscrapo.py
